--- a/cstrike/addons/sourcemod/configs/cheat-control/allowed-commands.ini
+++ b/cstrike/addons/sourcemod/configs/cheat-control/allowed-commands.ini
@@ -1,3 +1,5 @@
 // Add the cheat commands or impulses that should be allowed here
 r_drawclipbrushes 1
 r_drawclipbrushes
+mat_fullbright 1
+mat_fullbright
