--- a/cstrike/addons/sourcemod/configs/shavit-advertisements.cfg
+++ b/cstrike/addons/sourcemod/configs/shavit-advertisements.cfg
@@ -18,11 +18,10 @@
 "Advertisements"
 {
 	"0" "[SPONSORED] Palmer smells"
-	"1" "Welcome to bhop.rip | join our discord and say hi https://discord.gg/KyM8qVg"
+	"1" "Welcome to bhop.rip | join our discord and say hi bhop.rip/discord"
 	"2" "Please note that all skill-enhancing scripts (nulls, optis, autostrafe, etc) are not allowed and are a bannable offence."
-	"3" "If you have any questions or ideas please chat to us on Discord! (https://discord.gg/KyM8qVg)"
+	"3" "If you have any questions or ideas please chat to us on Discord! (bhop.rip/discord)"
 	"4" "View latest records/stats: https://bhop.rip"
 	"5" "You can join this server directly by typing 'connect bhop.rip' in the console"
-	"6" "Do you want to put a message here? Message us on Discord | https://discord.gg/KyM8qVg"
-	"7" "Type !music to stop playing map music"
+	"6" "Do you want to put a message here? Message us on Discord | bhop.rip/discord"
 }
