updated ban files

--- a/cstrike/cfg/banned_user.cfg
+++ b/cstrike/cfg/banned_user.cfg
@@ -4,3 +4,10 @@ banid 0 [U:1:1018551987]
 banid 0 [U:1:140075607]
 banid 0 [U:1:79409345]
 banid 0 [U:1:202170596]
+banid 0 [U:1:1127372266]
+banid 0 [U:1:411040513]
+banid 0 [U:1:858423031]
+banid 0 [U:1:259811732]
+banid 0 [U:1:150227549]
+banid 0 [U:1:359152097]
+banid 0 [U:1:924051245]
