--- a/cstrike/cfg/banned_ip.cfg
+++ b/cstrike/cfg/banned_ip.cfg
@@ -3,3 +3,5 @@ addip 0 198.143.158.82
 addip 0 108.178.61.58
 addip 0 69.175.97.170
 addip 0 96.127.158.234
+addip 0 184.154.47.2
+addip 0 5.3.169.7
