updated config files with new stuff

--- a/cstrike/addons/sourcemod/configs/shavit-styles.cfg
+++ b/cstrike/addons/sourcemod/configs/shavit-styles.cfg
@@ -24,6 +24,10 @@
 {
 	"0"
 	{
+		// new timer crap
+		"enabled"			"1"
+		"inaccessible"		"0"
+
 		// Strings
 		"name"				"Normal" // Style name.
 		"shortname"			"NM" // Short style name.
@@ -44,9 +48,11 @@
 		"gravity"			"1.0" // Gravity setting, 1.0 for default. Standard for low gravity styles is 0.6.
 		"speed"				"1.0" // Speed multiplier, 1.0 for default. Standard for slowmo styles is 0.5.
 		"timescale"			"1.0" // Timing will scale with this setting.
+		"force_timescale"	"0" // Force the timescale every jump? Default is 0 for normal timescales.
+		"jump_multiplier"	"0.0" // Mulitplier for the vertical velocity per jump. 0.0 for disabled.
+		"jump_bonus"		"0.0" // Bonus vertical velocity to gain per jump. If set to e.g. 100.0, the player will gain 100 bonus vertial velocity per jump.
+
 		"velocity"			"1.0" // % of horizontal velocity to keep per jump. a value 0.9 will make the player lose 10% of their velocity per jump. Likewise, values above 1 will result in speed gains.
-		"bonus_velocity"	"0.0" // Bonus velocity to gain per jump. If set to e.g. 100.0, the player will gain 100 bonus velocity per jump.
-		"min_velocity"		"0.0" // Minimum amount of horizontal velocity to keep per jump. If set to 600.0, the player can't have less than 600 velocity per jump.
 
 		// Mode settings
 		"block_w"			"0" // Block +forward (W).
@@ -58,6 +64,7 @@
 		"block_pleft"		"0" // Block +left. 2 to stop timer.
 		"block_pright"		"0" // Block +right. 2 to stop timer.
 		"block_pstrafe"		"0" // Prevent button inconsistencies (including +pstrafe). May have false positives when players lag. Will prevent some strafe hacks too. Set this to 2 to also stop the timer.
+		"force_groundkeys"	"0" // Forces the above settings even while on ground. e.g. enabling this will not allow W/D or W/A prestrafing when playing styles that disable the keys.
 
 		// Feature excluding
 		"unranked"			"0" // Unranked style. No ranking points and no records.
@@ -77,6 +84,7 @@
 		"special"			"0" // For third-party modules. The core plugins will not need this setting.
 		"specialstring"		"" // For modularity. Separated with semicolon. Built-in flags: "segments".
 		"permission"		"" // Permission required. Syntax: "flag;override". For example "p;style_tas" to require the 'p' flag or the "style_tas" override.
+		"ordering"			"0" // Ordering in menus where styles appear. If this value is not present, style ID will be used instead.
 	}
 
 	"1"
