--- a/cstrike/addons/sourcemod/configs/shavit-zones.cfg
+++ b/cstrike/addons/sourcemod/configs/shavit-zones.cfg
@@ -134,6 +134,30 @@
 			"width"		"1.5"
 		}
 
+		"Airaccelerate"
+		{
+			"visible"	"1"
+			
+			"red"		"118"
+			"green"		"102"
+			"blue"		"173"
+			
+			"alpha"		"255"
+			"width"		"1.5"
+		}
+
+		"Stage"
+		{
+			"visible"	"1"
+			
+			"red"		"255"
+			"green"		"153"
+			"blue"		"0"
+			
+			"alpha"		"255"
+			"width"		"0.5"
+		}
+
 		"Bonus Start"
 		{
 			"visible"	"1"
@@ -252,6 +276,30 @@
 			
 			"alpha"		"255"
 			"width"		"1.0"
+		}
+
+		"Bonus Airaccelerate"
+		{
+			"visible"	"1"
+			
+			"red"		"118"
+			"green"		"102"
+			"blue"		"173"
+			
+			"alpha"		"255"
+			"width"		"1.0"
+		}
+		
+		"Bonus Stage"
+		{
+			"visible"	"1"
+			
+			"red"		"204"
+			"green"		"153"
+			"blue"		"255"
+			
+			"alpha"		"255"
+			"width"		"0.5"
 		}
 	}
 }
