--- a/cstrike/addons/sourcemod/configs/shavit-replay.cfg
+++ b/cstrike/addons/sourcemod/configs/shavit-replay.cfg
@@ -17,27 +17,66 @@
 // Variables:
 // {map} - current map.
 // {style} - the style name.
-// {styletag} - the style's tag. See "clantag" in "shavit-styles.cfg".
 // {time} - formatted time for the WR currently being played.
 // {player} - the name of the player that holds the *record*, might be incorrect for replays from the beta version of bhoptimer.
 // {track} - track that the bot replays. Translated from the server's defined language.
+// {type} - Replay bot type. Central, Dynamic, and Looping...
 //
+"Replay"
+{
+	"clantag" "{type}"
+	"namestyle" "{track} {style} - {time}"
+	"centralname" "!replay"
+	"centralstyle" "!replay"
+	"centralstyletag" "!replay"
+	"unloaded" "{style} - N/A"
 
-"Replay"                                                                                                       
-{                                                                                                              
-        "clantag" "REPLAY"                                                                                     
-        "namestyle" "{track} {style} - {time}"                                                                         
-        "centralname" "!replay"                                                                                
-        "centralstyle" "!replay"                                                                               
-        "centralstyletag" "!replay"                                                                            
-        "unloaded" "{track} {style} - N/A"                                                                             
-                                                                                                               
-        // Replay data folder. This is where replays are loaded from and saved to.                             
-        // Note: To use a path outside of the game directory, you will have to get out of it with "../".       
-        // Edit at your own risk.                                                                              
-        //                                                                                                     
-        // Variables:                                                                                          
-        // {SM} - SourceMod folder. If this variable isn't included, you will have to specify the full path.   
-        "replayfolder" "{SM}/data/replaybot"                                                                   
-}                                                                                                              
+	// Replay data folder. This is where replays are loaded from and saved to.
+	// Note: To use a path outside of the game directory, you will have to get out of it with "../".
+	// Edit at your own risk.
+	//
+	// Variables:
+	// {SM} - SourceMod folder. If this variable isn't included, you will have to specify the full path.
+	"replayfolder" "{SM}/data/replaybot"
 
+	// TODO: explain keys...
+	"Looping Bots"
+	{
+		"Main Normal Bot"
+		{
+			"enabled"             "1"
+			"tracks"              "0"
+			"styles"              "0"
+		}
+		"Other Styles"
+		{
+			"enabled"             "1"
+			"tracks"              "0"
+			"styles"              "1;2;3;4;5;6;7;8;9;10;11;12;13;14;15;16"
+		}
+		"Bonus Normal Bot"
+		{
+			"enabled"             "1"
+			"tracks"              "1"
+			"styles"              "0"
+		}
+		"Shit Bonuses Bot"
+		{
+			"enabled"             "1"
+			"tracks"              "2;3;4;5;6;7;8"
+			"styles"              "0"
+		}
+		"TAS Bot"
+		{
+			"enabled"             "0"
+			"tracks"              "0;1;2;3;4;5;6;7;8"
+			"styles"              "10"
+		}
+		"Dumb Styles Bot"
+		{
+			"enabled"             "0"
+			"tracks"              "0"
+			"styles"              "4;6"
+		}
+	}
+}
