--- a/cstrike/addons/sourcemod/configs/shavit-sounds.cfg
+++ b/cstrike/addons/sourcemod/configs/shavit-sounds.cfg
@@ -11,6 +11,7 @@
 // world - new server WR
 // worst - worst record for the track/style
 // number - rank on map, only one per rank (example: "1" "shavit/pro.mp3"), will play for every player. overrides others
+// noimprovement - time is worse than old PB
 "first" "btimes/baka.wav"
 "personal" "btimes/buzzer.wav"
 "world" "btimes/ameno.mp3"
