fixing levels config

--- a/cstrike/addons/sourcemod/configs/admin_levels.cfg
+++ b/cstrike/addons/sourcemod/configs/admin_levels.cfg
@@ -31,7 +31,6 @@ Levels
 		 * for you to expand on the previous groups, using Overrides.
 		 */
 		
-		"shavit_chat"		"j"
 		"custom2"		"p"
 		"custom3"		"q"
 		"custom4"		"r"
@@ -45,5 +44,8 @@ Levels
 		 * however, they themselves are not automatically immune.
 		 */
 		"root"			"z"
+	}
+	Overrides {
+		"shavit_chat"		"j"
 	}
 }
