--- a/cstrike/addons/sourcemod/configs/shavit-chat.cfg
+++ b/cstrike/addons/sourcemod/configs/shavit-chat.cfg
@@ -556,11 +556,57 @@
         "display"       "[Owner]<n>Owner"
 
     }
+
+    "33"
+
+    {
+
+        "free"       "1"
+
+        "flag"       "z"
+
+        "easteregg"       "1"
+
+        "name"          "^ffffff[^49E93BDeveloper^ffffff]^ff0000 {name}"
+
+        "message"       "{rand}"
+
+        "display"       "[Developer]<n>Developer"
+
+    }
+
+    "34"
+    {
+        "free"       "1"
+        "flag"       "g"
+        "name"          "^ffffff[^E83A71Mod^ffffff]{rand} {name}"
+        "message"       "^E7E83A"
+        "display"       "[Mod]<n>For the moderator team."
+    }
+
+    "35"
+    {
+        "free"       "1"
+        "flag"       "g"
+        "name"          "^ffffff[{rand}ƅɦορ^ffffff]^64A8FF {name}"
+        "message"       "^ffffff"
+        "display"       "[bhop]<n>For the moderator team."
+    }
+
+    "35"
+    {
+        "free"       "1"
+        "name"          "^ffffff[^92FF01S^75FF1EL^58FF3BI^3BFF58M^1EFF75E^01FF92D^ffffff]^6CFF20 {name}"
+        "message"       "^ffffff"
+        "display"       "[SLIMED]<n>Uh oh, you can't show that to people!"
+    }
+
+
     "1"
     {
         "ranks"         "1"
-        "name"          "{RGB}fff121#1 {team}{name}"
-        "message"       "{rand}"
+        "name"          "^ffffff[^FF6161I ^FFCA61L^CAFF61O^61FF61V^61FFCAE ^61CAFFB^6161FFH^CA61FFO^FF61CAP^ffffff] ^e83aa0{name}"
+        "message"       "^FF8EF6"
         "display"       "[#1]<n>Uneasy lies the head that wears a crown."
     }
 
