--- a/cstrike/cfg/sourcemod/plugin.shavit-core.cfg
+++ b/cstrike/cfg/sourcemod/plugin.shavit-core.cfg
@@ -73,4 +73,11 @@ shavit_core_simplerladders "1"
 // Maximum: "1.000000"
 shavit_core_useoffsets "1"
 
+// Whether to prefix SayText2 messages with the time.
+// -
+// Default: "0"
+// Minimum: "0.000000"
+// Maximum: "1.000000"
+shavit_core_timeinmessages "0"
+
 
