--- a/cstrike/cfg/sourcemod/plugin.shavit-misc.cfg
+++ b/cstrike/cfg/sourcemod/plugin.shavit-misc.cfg
@@ -21,7 +21,7 @@ shavit_misc_godmode "3"
 // 4 - Limit to prestrafelimit but allow prespeeding. Combine with shavit_core_nozaxisspeed 1 for SourceCode timer's behavior.
 // 5 - Limit horizontal speed to prestrafe but allow prespeeding.
 // -
-// Default: "1"
+// Default: "2"
 // Minimum: "0.000000"
 // Maximum: "5.000000"
 shavit_misc_prespeed "1"
@@ -108,7 +108,7 @@ shavit_misc_noblock "1"
 // 0 - Disabled
 // 1 - Enabled
 // -
-// Default: "0"
+// Default: "1"
 // Minimum: "0.000000"
 // Maximum: "1.000000"
 shavit_misc_noblood "0"
@@ -133,7 +133,7 @@ shavit_misc_createspawnpoints "24"
 // 0 - Disabled (radio commands work)
 // 1 - Enabled (radio commands are blocked)
 // -
-// Default: "0"
+// Default: "1"
 // Minimum: "0.000000"
 // Maximum: "1.000000"
 shavit_misc_disableradio "0"
@@ -152,17 +152,18 @@ shavit_misc_scoreboard "1"
 // 0 - Disabled
 // 1 - Enabled
 // 2 - Also give infinite reserved ammo.
+// 3 - Also give infinite clip ammo.
 // -
 // Default: "2"
 // Minimum: "0.000000"
-// Maximum: "2.000000"
+// Maximum: "3.000000"
 shavit_misc_weaponcommands "2"
 
 // Player opacity (alpha) to set on spawn.
 // -1 - Disabled
 // Value can go up to 255. 0 for invisibility.
 // -
-// Default: "-1"
+// Default: "69"
 // Minimum: "-1.000000"
 // Maximum: "255.000000"
 shavit_misc_playeropacity "-1"
@@ -234,12 +235,11 @@ shavit_misc_clantag "{tr}{styletag} :: {time}"
 // Maximum: "1.000000"
 shavit_misc_dropall "1"
 
-// Reset the player's targetname upon timer start?
-// Recommended to leave disabled. Enable via per-map configs when necessary.
+// Reset the player's targetname and eventqueue upon timer start?
 // 0 - Disabled
 // 1 - Enabled
 // -
-// Default: "0"
+// Default: "1"
 // Minimum: "0.000000"
 // Maximum: "1.000000"
 shavit_misc_resettargetname "0"
@@ -249,7 +249,7 @@ shavit_misc_resettargetname "0"
 // 0 - Disabled
 // 1 - Enabled
 // -
-// Default: "0"
+// Default: "1"
 // Minimum: "0.000000"
 // Maximum: "1.000000"
 shavit_misc_restorestates "0"
@@ -282,7 +282,7 @@ shavit_misc_speclist "1"
 shavit_misc_maxcp "1000"
 
 // Maximum amount of segmented checkpoints. Make this less or equal to shavit_misc_maxcp.
-// Note: Very high values will result in HUGE memory usage!
+// Note: Very high values will result in HUGE memory usage! Segmented checkpoints contain frame data!
 // -
 // Default: "10"
 // Minimum: "1.000000"
@@ -302,13 +302,13 @@ shavit_misc_hidechatcmds "1"
 // -1 - Until map change
 // 0 - Disabled
 // -
-// Default: "300"
+// Default: "600"
 shavit_misc_persistdata "300"
 
 // Time in seconds to display a warning before stopping the timer with noclip or !stop.
 // 0 - Disabled
 // -
-// Default: "900"
+// Default: "180"
 shavit_misc_stoptimerwarning "900"
 
 // How many "NEW <style> WR!!!" messages to print?
@@ -324,9 +324,9 @@ shavit_misc_wrmessages "3"
 // 1 - Blocked while !hide is enabled
 // 2 - Always blocked
 // -
-// Default: "0"
+// Default: "1"
 // Minimum: "0.000000"
-// Maximum: "3.000000"
+// Maximum: "2.000000"
 shavit_misc_bhopsounds "0"
 
 // Should noclip be be restricted
@@ -334,9 +334,16 @@ shavit_misc_bhopsounds "0"
 // 1 - No vertical velocity while in noclip in start zone
 // 2 - No noclip in start zone
 // -
-// Default: "1"
+// Default: "0"
 // Minimum: "0.000000"
 // Maximum: "2.000000"
 shavit_misc_restrictnoclip "1"
+
+// Enable footstep sounds for replay bots. Only works if shavit_misc_bhopsounds is less than 2.
+// -
+// Default: "1"
+// Minimum: "0.000000"
+// Maximum: "1.000000"
+shavit_misc_botfootsteps "1"
 
 
