--- a/cstrike/cfg/sourcemod/plugin.shavit-chat.cfg
+++ b/cstrike/cfg/sourcemod/plugin.shavit-chat.cfg
@@ -13,7 +13,7 @@ shavit_chat_rankings "1"
 
 // Allow custom chat names or message colors?
 // 0 - Disabled
-// 1 - Enabled (requires chat flag/'shavit_chat' override)
+// 1 - Enabled (requires chat flag/'shavit_chat' override or granted access with sm_ccadd)
 // 2 - Allow use by everyone
 // -
 // Default: "1"
