--- a/cstrike/cfg/sourcemod/plugin.shavit-replay.cfg
+++ b/cstrike/cfg/sourcemod/plugin.shavit-replay.cfg
@@ -11,7 +11,7 @@ shavit_replay_enabled "1"
 
 // Time to wait before restarting the replay after it finishes playing.
 // -
-// Default: "5.0"
+// Default: "2.5"
 // Minimum: "0.000000"
 // Maximum: "10.000000"
 shavit_replay_delay "5.0"
@@ -49,7 +49,7 @@ shavit_replay_centralbot "1"
 // -
 // Default: "3"
 // Minimum: "0.000000"
-// Maximum: "6.000000"
+// Maximum: "22.000000"
 shavit_replay_dynamicbotlimit "3"
 
 // Should players be able to view replays through a prop instead of a bot?
@@ -101,7 +101,7 @@ shavit_replay_pbcooldown "10.0"
 
 // Time (in seconds) to record before a player leaves start zone. (The value should NOT be too high)
 // -
-// Default: "1.0"
+// Default: "1.5"
 // Minimum: "0.000000"
 shavit_replay_preruntime "1.0"
 
@@ -129,6 +129,13 @@ shavit_replay_timedifference_cheap "0.0"
 // Default: "0.0"
 // Minimum: "0.000000"
 shavit_replay_timedifference_search "0.0"
+
+// Enabled dynamic time/velocity differences for the hud
+// -
+// Default: "0"
+// Minimum: "0.000000"
+// Maximum: "1.000000"
+shavit_replay_timedifference "0"
 
 // How often (in ticks) should the time difference update.
 // You should probably keep this around 0.1s worth of ticks.
