preparing for new merge

--- a/cstrike/cfg/banned_user.cfg
+++ b/cstrike/cfg/banned_user.cfg
@@ -11,3 +11,5 @@ banid 0 [U:1:259811732]
 banid 0 [U:1:150227549]
 banid 0 [U:1:359152097]
 banid 0 [U:1:924051245]
+banid 0 [U:1:463595645]
+banid 0 [U:1:167649389]
