--- a/cstrike/addons/sourcemod/configs/shavit-replay.cfg
+++ b/cstrike/addons/sourcemod/configs/shavit-replay.cfg
@@ -10,13 +10,12 @@
 // "clantag" - clan tag for replay bots (central or not) to use.
 // "namestyle" - this is the name style replay bots will use. Including the central bot, as long as it's during playback.
 // "centralname" - the central bot's idle name, AKA when nothing is playing.
-// "centralstyle" - {style} value for the central bot (when idle).
-// "centralstyletag" - {styletag} value for the central bot (when idle).
 // "unloaded" - text to show for unloaded replay data. (will never show up for central bots.)
 //
 // Variables:
 // {map} - current map.
 // {style} - the style name.
+// {styletag} - the style's tag. See "clantag" in "shavit-styles.cfg".
 // {time} - formatted time for the WR currently being played.
 // {player} - the name of the player that holds the *record*, might be incorrect for replays from the beta version of bhoptimer.
 // {track} - track that the bot replays. Translated from the server's defined language.
@@ -27,8 +26,6 @@
 	"clantag" "{type}"
 	"namestyle" "{track} {style} - {time}"
 	"centralname" "!replay"
-	"centralstyle" "!replay"
-	"centralstyletag" "!replay"
 	"unloaded" "{style} - N/A"
 
 	// Replay data folder. This is where replays are loaded from and saved to.
