--- a/cstrike/cfg/sourcemod/plugin.shavit-replay.cfg
+++ b/cstrike/cfg/sourcemod/plugin.shavit-replay.cfg
@@ -95,15 +95,23 @@ shavit_replay_pbcanstop "1"
 // Cooldown in seconds to apply for players between each playback they request/stop.
 // Does not apply to RCON admins.
 // -
-// Default: "10.0"
+// Default: "3.5"
 // Minimum: "0.000000"
 shavit_replay_pbcooldown "10.0"
 
-// Time (in seconds) to record before a player leaves start zone. (The value should NOT be too high)
+// Time (in seconds) to record before a player leaves start zone.
 // -
 // Default: "1.5"
 // Minimum: "0.000000"
+// Maximum: "2.000000"
 shavit_replay_preruntime "1.0"
+
+// Time (in seconds) to record after a player enters the end zone.
+// -
+// Default: "1.5"
+// Minimum: "0.000000"
+// Maximum: "2.000000"
+shavit_replay_postruntime "1.5"
 
 // Record prerun frames outside the start zone?
 // -
