--- a/cstrike/cfg/sourcemod/plugin.shavit-misc.cfg
+++ b/cstrike/cfg/sourcemod/plugin.shavit-misc.cfg
@@ -159,6 +159,13 @@ shavit_misc_scoreboard "1"
 // Maximum: "3.000000"
 shavit_misc_weaponcommands "2"
 
+// Make glocks spawn on burst-fire and USPs spawn with a silencer on.
+// -
+// Default: "1"
+// Minimum: "0.000000"
+// Maximum: "1.000000"
+shavit_misc_weaponsspawngood "1"
+
 // Player opacity (alpha) to set on spawn.
 // -1 - Disabled
 // Value can go up to 255. 0 for invisibility.
@@ -242,7 +249,7 @@ shavit_misc_dropall "1"
 // Default: "1"
 // Minimum: "0.000000"
 // Maximum: "1.000000"
-shavit_misc_resettargetname "0"
+shavit_misc_resettargetname "1"
 
 // Save the players' timer/position etc.. when they die/change teams,
 // and load the data when they spawn?
@@ -303,7 +310,7 @@ shavit_misc_hidechatcmds "1"
 // 0 - Disabled
 // -
 // Default: "600"
-shavit_misc_persistdata "300"
+shavit_misc_persistdata "0"
 
 // Time in seconds to display a warning before stopping the timer with noclip or !stop.
 // 0 - Disabled
