--- a/cstrike/addons/sourcemod/configs/shavit-replay.cfg
+++ b/cstrike/addons/sourcemod/configs/shavit-replay.cfg
@@ -47,11 +47,17 @@
 			"tracks"              "0"
 			"styles"              "0"
 		}
+		"Main Segmented Bot"
+		{
+			"enabled"             "1"
+			"tracks"              "0"
+			"styles"              "7"
+		}
 		"Other Styles"
 		{
 			"enabled"             "1"
 			"tracks"              "0"
-			"styles"              "1;2;3;4;5;6;7;8;9;10;11;12;13;14;15;16"
+			"styles"              "1;2;3;4;5;6;8;9;10;11;12;13;14;15;16"
 		}
 		"Bonus Normal Bot"
 		{
